# phronis.tech

./: .env.example  .gitignore  .nvmrc  README.md  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json  tsconfig.json
docs/: DAO_SECURITY_LAYERS_L1_L2_L3.md  MEMBER_SECTION_SECURITY_L1_L2_L3.md  MEMBER_TERMINAL_ROADMAP.md
scripts/: verify-academy-videos.mjs
solana/phronis-dao/: Anchor.toml  Cargo.toml  README.md
solana/phronis-dao/programs/phronis_dao/: Cargo.toml
solana/phronis-dao/programs/phronis_dao/src/: lib.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(dashboard)/: layout.tsx
src/app/_hooks/: use-embedded-ethereum-address.ts  use-embedded-solana-address.ts  use-ethereum-smart-wallet.ts  use-member-auth-bridge.ts  use-onboarding-session.ts  use-solana-card-funding.ts
src/app/_lib/: arena-content.ts  contact-schema.ts  member-api-l3.ts  member-auth.ts  member-social-feed.ts  member-social-types.ts  phronis-dao-token.ts  phronis-liquidity-content.ts  phronis-usdc.ts  privy-client-config.ts  privy-earn.ts  privy-ethereum-accounts.ts  privy-server.ts  privy-solana-accounts.ts  privy-verify-bearer.ts  (+3 more)
supabase/migrations/: 20260509130000_member_crypto_course_quiz.sql  20260514170000_member_profiles.sql  20260514180000_onboarding_members.sql  20260514190000_members_email.sql  20260515120000_wallets_usdc_balance.sql  20260515200000_member_terminal_desk.sql  20260516120000_member_social_and_trades.sql  20260517120000_wallets_spl_balances.sql  20260517140000_social_feed.sql
(+205 files in other folders)
